# YAGE

./: .gitignore  .gitmodules  CMakeLists.txt  GameBoy.sln  LICENSE  README.md  install-deps-ubuntu.sh  latest_test_summary.md  splash.gb
.cursor/rules/: build-and-test.mdc  code-style.mdc  emulator-core-code-style.mdc
.github/workflows/: ci.yml  test-report.yml  zig-build.yml
GameBoy/: CPU.cpp  CPU.h  CommandLineArguments.cpp  CommandLineArguments.h  FileParser.cpp  GameBoy.cpp  GameBoy.vcxproj  GameBoy.vcxproj.filters  Helpers.h  Input.h  InstructionFunctions.cpp  InstructionFunctions.h  Logging.cpp  Logging.h  Registers.h  ScreenshotUtility.cpp  ScreenshotUtility.h  VirtualMachine.cpp  VirtualMachine.h
GameBoyCore/: CPU.cpp  CPU.h  Clock.cpp  Clock.h  GameBoyCore.vcxproj  GameBoyCore.vcxproj.filters  Helpers.h  InstructionFunctions.cpp  InstructionFunctions.h  Interrupts.cpp  Interrupts.h  Joypad.cpp  Joypad.h  Logging.h  Memory.cpp  Memory.h  PPU.cpp  PPU.h  PixelFetcher.cpp  Registers.h  VirtualMachine.cpp  VirtualMachine.h
Tests/: ClockTests.cpp  DMATests.cpp  InstructionTests.cpp  InterruptTests.cpp  Tests.vcxproj
cmake/: FindPortAudio.cmake  Findshaderc.cmake
externalLibs/: portaudio.lib  portaudio_x64.lib
src/GameBoy/: Audio.cpp  Audio.h  AudioPortaudio.cpp  AudioPortaudio.h  Backend.h  BackendWin32.cpp  BackendWin32.h  Clock.cpp  Clock.h  Debugging.cpp  Debugging.h  EngineController.cpp  EngineController.h  EngineState.cpp  EngineState.h  FileParser.cpp  FileParser.h  GameBoy.cpp  Input.cpp  Input.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  MiniMath.cpp  MiniMath.h  RendererVulkan.cpp  RendererVulkan.h  ScreenshotUtility.cpp  ShaderCompiler.cpp  ShaderCompiler.h  Time.cpp  Time.h  TimerWin32.cpp  TimerWin32.h  UI.cpp  UI.h  YAGEFrontend.cpp  main.glsl
src/GameBoyCore/Include/: Emulator.h
src/GameBoyCore/Source/: APU.cpp  APU.h  AudioChannel.cpp  AudioChannel.h  CPU.cpp  CPU.h  Clock.cpp  Clock.h  Emulator.cpp  Emulator_C.cpp  Helpers.h  InstructionFunctions.cpp  InstructionFunctions.h  Interrupts.cpp  Interrupts.h  Joypad.cpp  Joypad.h  Logging.h  MBC.cpp  MBC.h  Memory.cpp  Memory.h  PPU.cpp  PPU.h  PixelFIFO.cpp  PixelFIFO.h  PixelFetcher.cpp  PixelFetcher.h  Registers.h  Serial.cpp  Serial.h  Serialization.cpp  Serialization.h  Timer.cpp  Timer.h  VirtualMachine.cpp  VirtualMachine.h
src/Rewinding/: DeltaEncoder.cpp  DeltaEncoder.h  FixedSizeRingbuffer.h  RewindController.cpp  RewindController.h
src/Tests/: ClockTests.cpp  DMATests.cpp  ExternalTests.cpp  FileHelper.cpp  FileHelper.h  InstructionTests.cpp  InterruptTests.cpp  RewindTests.cpp  Tests.cpp
src/YAGECore/: CMakeLists.txt
src/YAGECore/Include/: Emulator.h  Emulator_C.h
src/YAGECore/Source/: APU.cpp  APU.h  Allocator.cpp  Allocator.h  AudioChannel.h  CPU.cpp  CPU.h  CppIncludes.cpp  CppIncludes.h  Emulator.cpp  Emulator_C.cpp  Helpers.cpp  Helpers.h  InstructionFunctions.cpp  InstructionFunctions.h  Interrupts.cpp  Interrupts.h  Joypad.cpp  Joypad.h  Logging.cpp  Logging.h  MBC.cpp  MBC.h  Memory.cpp  Memory.h  PPU.cpp  PPU.h  PixelFIFO.h  PixelFetcher.cpp  PixelFetcher.h  Registers.h  Serial.cpp  Serial.h  Serialization.cpp  Serialization.h  Timer.cpp  Timer.h  VirtualMachine.cpp  VirtualMachine.h  YString.h  (+1 more)
src/YAGEFrontend/: Audio.h  AudioPortaudio.cpp  AudioWin32.cpp  AudioWin32.h  Backend.h  BackendLinux.cpp  BackendLinux.h  BackendWin32.cpp  BackendWin32.h  CMakeLists.txt  Clock.h  CommandLineArguments.cpp  CommandLineArguments.h  DebuggerUI.cpp  DebuggerUI.h  DebuggerUtils.cpp  DebuggerUtils.h  Debugging.cpp  Debugging.h  DeltaEncoder.cpp  DeltaEncoder.h  EngineController.cpp  EngineController.h  EngineState.cpp  EngineState.h  FileParser.h  FixedSizeRingbuffer.cpp  FixedSizeRingbuffer.h  ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  PlatformDefines.h  RendererVulkan.cpp  RendererVulkan.h  RewindController.cpp  (+19 more)
src/YAGEOS/: allocation.zig  c_code.c  c_header.h  cpp_code.cpp  cpp_header.h  defs.zig  dwarf.zig  linker.ld  log.zig  main.zig  mmio.zig  mmu.zig  renderer.zig  rom.zig  utils.zig
